# Netify Agent Deploy Automake File for pfSense
# Copyright (C) 2016-2019 eGloo, Incorporated
#
# This is free software, licensed under the GNU General Public License v3.

EXTRA_DIST = netify_pfsense INSTALL-pfsense-2.4.4-p3.md

#sharedatadir = $(datadir)/netifyd
#sharedata_DATA = INSTALL-pfsense-2.4.4-p3.md
doc_DATA = INSTALL-pfsense-2.4.4-p3.md

sharedatapfsensedir = $(datadir)/netifyd/netify_pfsense
sharedatapfsense_DATA = netify_pfsense/options.py
